1998-02-16  Thomas E. Dickey  <dickey@clark.net>

	* src/ded2s.c, src/ded.c, src/ded.h, src/dedring.c: rename:O_opt

	* src/showpath.c: gcc signed/unsigned

	* src/ded.c, src/restat.c, src/dedview.c, src/ded.h: unused params

	* src/dedtype.c: gcc warnings (signed/unsigned)

	* src/ded.h: make curfile unsigned, fix warnings

	* src/dedview.c, src/dedscan.c: gcc warnings (signed/unsigned)

	* src/deduniq.c: signed/unsigned nits

	* src/dedline.c: more compiler warnings (signed/unsigned)

	* src/dedfind.c:
	make this handle unsigned gbl->curfile, as well as make it a little more
	robust wrt empty search strings.

	* src/dedfind.c: workaround so we can make curfile unsigned

	* src/ded.c: missed 'O' to 'Y' change when I rolled back a test-change

1998-02-15  Thomas E. Dickey  <dickey@clark.net>

	* src/version.h:
	generate all makefiles, making this portable to systems having 'make'
	programs w/o archive rules.
	remove apollo_sr10 code (because it's obsolete, and because I want to be
	able to re-use some of the command-codes).  This frees up o/O, to which I
	renamed y/Y (was lock owner).  That lets me reserve y/Y for vertical split.
	Started working on compiler warnings (gcc's signed/unsigned).
	Add home/end/ppage/npage keys where appropriate.
	Make the tag/untag operations faster by moving repaint out of repeat-loop.
	Correct a missing 'else' that caused future-dates to be formatted as if they
	were in the current week.
	Correct an ifdef for systems that have no 'realpath()'; was invoking chdir
	and this caused incorrect result in path_RESOLVE().

	* src/dedscan.c: comment

	* src/dedtype.c: signed/unsigned nits

	* src/ded.h, src/ded.c: more signed/unsigned nits

	* src/dedview.c: signed/unsigned nits

	* src/dedscan.c:
	corrected ifdef'ing for HAVE_REALPATH, which incorrectly did a chdir(old_wd)
	when I didn't have 'realpath()'.

	* src/dedline.c: more signed/unsigned nits

	* src/ded2s.c:
	oops: missed an 'else' in time2s, so all future dates were formatted as if